--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,7 @@ flutter:
   assets:
     - assets/
     - assets/tiles/
-    - assets/maps/
-    - assets/texture/
+    - assets/images/
   
   
   
