--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
         "minimap.background": "#00000000",
         "scrollbar.shadow": "#00000000"
     },
-    "dart.flutterSdkPath": ".fvm/flutter_sdk",
+    // "dart.flutterSdkPath": ".fvm/flutter_sdk",
     // Remove .fvm files from search
     "search.exclude": {
         "**/.fvm": true
